# wordle_solver

./: .gitignore  LICENSE  Makefile  README.md  diagram.d2  diagram.mmd  init.sh  nixpacks.toml  pyproject.toml  railway.toml  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: game.py
data/: benchmark_words.json
docs/: bellman.md  entropy.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: BenchmarkScreen.tsx  Board.tsx  ExploreScreen.tsx  MenuScreen.tsx  PlayScreen.tsx  ScreenLayout.tsx  StrategySelector.tsx
outputs/: results.json
scripts/: railway-build.sh  railway-start.sh
solver/: pyproject.toml
solver/src/solver/: __init__.py  agent.py  belief.py  cli.py  env.py  model.py  strategies.py
solver/src/solver/cli/: __init__.py  explore.py  helpers.py  play.py
solver/src/solver/cli/benchmark/: __init__.py  cache.py  cli.py  config.py  labels.py  plots.py  runner.py  types.py  words.py
solver/src/solver/data/: __init__.py  cache.py  patterns.py  words.py
solver/src/solver/data/cache/: __init__.py  base.py  bellman.py  entropy.py
solver/src/solver/model/: __init__.py  base.py  entropy.py  hard_bellman.py  hybrid.py  threshold_bellman.py
solver/tests/: conftest.py  test_agent.py  test_belief.py  test_bellman_cache.py  test_benchmark_cache.py  test_benchmark_words.py  test_cache_dir.py  test_entropy_cache.py  test_entropy_model.py  test_env.py  test_hard_bellman_model.py  test_opener.py  test_pattern_table.py  test_threshold_bellman_model.py  test_words.py  test_words_handler.py
solver/tests/fixtures/: sample_words.txt
src/palabra_solver/: __init__.py  agent.py  belief.py  cli.py  env.py  feedback.py  model.py  words.py
tests/: test_words.py
