[project]
name = "wordle-solver"
version = "0.1.0"
description = "Optimal player for La Palabra del Día (Spanish Wordle)"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "tqdm>=4.66"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.3", "ruff>=0.4"]
benchmark = ["matplotlib>=3.8"]

[project.scripts]
palabra = "solver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 10
timeout_method = "thread"
markers = [
    "timeout(seconds): per-test time limit enforced by pytest-timeout",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
